--- a/src/app/components/input/input.component.css
+++ b/src/app/components/input/input.component.css
@@ -15,3 +15,15 @@
   border: none;
   border-radius: 50%;
 }
+
+.timer-count{
+  width: 200px;
+  height: 20px;
+  margin-left: 40px;
+  margin-top: 30px;
+  text-align: center;
+  font-size: 18px;
+  outline: none;
+  border: none;
+  border-radius: 15px;
+}
