--- a/src/app/timer/timer.component.html
+++ b/src/app/timer/timer.component.html
@@ -1,6 +1,7 @@
 <div class="timer" [style.background-color]=bgColor>
-    <input class="timer-count" type="text" value = "{{ second * 1000 | date:'mm:ss'}}" readonly>
-    <button class = "btn start" (click) = "startTimer()">Start</button>
-    <button class = "btn pause" (click) = "pauseTimer()">Pause</button>
-    <button class = "btn reset" (click) = "resetTime()">Reset</button>
+  <p class="timerName">{{timerName}}</p>
+    <app-input [type]="'text'" [value] = "(second * 1000 | date:'mm:ss') || '00:00'"></app-input>
+    <app-button (onClick)="startTimer()" [btnType] = "'start'" [value]="'start'"></app-button>
+    <app-button (onClick)="pauseTimer()" [btnType]="'pause'" [value]="'pause'"></app-button>
+    <app-button (onClick)="resetTime()" [btnType]="'reset'" [value]="'reset'"></app-button>
 </div>
