--- a/src/app/timerChanger/timerChanger.component.html
+++ b/src/app/timerChanger/timerChanger.component.html
@@ -1,3 +1,3 @@
 <button class="btn" [style.background-color] = buttonColor><span class="delete">Timer {{buttonId + 1}}</span></button>
-<app-input class="color" (color)="newColor($event)"></app-input>
-<button class="close" (click)="onDeleteTimer()"></button>
+<app-input class="color" [type]="'color'" (modelChange)="newColor($event)"></app-input>
+<app-button (onClick)="onDeleteTimer()" [btnType] = "'close'"></app-button>
