--- a/src/app/wrapper/wrapper.component.html
+++ b/src/app/wrapper/wrapper.component.html
@@ -1,10 +1,12 @@
 <div class="wrapper" [ngStyle] = "{'flex-direction':changeStyle === true ? 'column' : 'row'}">
-  <app-timer *ngFor = "let timer of timers; let i = index" [bgColor]="timer.color" [resetTimer] = "resetAll" (buttonColor)="onGetButtonColor($event, i)" ></app-timer>
+  <app-timer *ngFor = "let timer of timers; let i = index; trackBy:trackBy" [bgColor]="timer.color" [timerName]="timer.name" [resetTimer] = "resetAll" (buttonColor)="onGetButtonColor($event, i)"></app-timer>
 </div>
 
+<app-form *ngIf="isPopupOpen" (popupOpened)="onAddTimer()" (timerFormSubmit)="timerForm($event)"></app-form>
+
 <div class="nav">
-  <app-button [value]="'Reset All'" (onClick)="onResetAll()"></app-button>
-  <app-button [value]="'Change Style'" (onClick)="onChangeStyle()"></app-button>
-  <app-button [value]="'Add'" (onClick)="onAddTimer()" style="display: block"></app-button>
-  <app-timerchanger *ngFor = "let time of timers; let index = index" [buttonColor]="time.buttonColor" [buttonId] = "index" (timerColor)="newColor($event, index)" (deleteTimer)="onDeleteTimer(index)"></app-timerchanger>
+  <app-button [btnType]="'btn'" [value]="'Reset All'" (onClick)="onResetAll()"></app-button>
+  <app-button [btnType]="'btn'" [value]="'Change Style'" (onClick)="onChangeStyle()"></app-button>
+  <app-button [btnType]="'btn'" [value]="'Add'" (onClick)="onAddTimer()" style="display:block;"></app-button>
+  <app-timerchanger *ngFor = "let time of timers; let index = index; trackBy:trackBy" [buttonColor]="time.buttonColor" [buttonId] = "index" (timerColor)="newColor($event, index)" (deleteTimer)="onDeleteTimer(index)"></app-timerchanger>
 </div>
