--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,187 @@
 /* You can add global styles to this file, and also import other style files */
+
+.input-control {
+  width: 100%;
+  padding: 12px 20px;
+  margin: 8px 0;
+  display: inline-block;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  box-sizing: border-box;
+  transition: box-shadow 0.1s ease-in-out;
+}
+
+.input-control:focus{
+  color: #495057;
+  background-color: #fff;
+  border-color: #80bdff;
+  outline: 0;
+  box-shadow: 0 0 0 0.2rem rgba(0, 123, 255, 0.25);
+}
+
+.btn{
+  margin: 15px;
+  width: 100px;
+  height: 30px;
+  cursor: pointer;
+  background-color:#768d87;
+  border-radius:5px;
+  border:1px solid black;
+  outline: none;
+  color:#ffffff;
+  font-family: Arial, serif;
+  font-weight:bold;
+  text-decoration:none;
+  text-shadow:0 -1px 0 #2b665e;
+}
+
+.btn:active{
+  transform: translateY(4px);
+}
+
+.start{
+  width: 70px;
+  height: 25px;
+  margin: 5px;
+  cursor: pointer;
+  box-shadow:inset 0 1px 3px 0 #91b8b3;
+  background-color:#768d87;
+  border-radius:5px;
+  border:1px solid black;
+  color:#ffffff;
+  font-family: Arial, serif;
+  outline: none;
+  font-weight:bold;
+  text-decoration:none;
+  text-shadow:0 -1px 0 #2b665e;
+  position: relative;
+  top: -1px;
+  left: 22px;
+}
+
+.start:active{
+  transform: translateY(2px);
+}
+
+.start:hover{
+  background-color: green;
+}
+
+.pause{
+  width: 70px;
+  height: 25px;
+  margin: 5px;
+  cursor: pointer;
+  box-shadow:inset 0 1px 3px 0 #91b8b3;
+  background-color:#768d87;
+  border-radius:5px;
+  border:1px solid black;
+  color:#ffffff;
+  font-family: Arial, serif;
+  outline: none;
+  font-weight:bold;
+  text-decoration:none;
+  text-shadow:0 -1px 0 #2b665e;
+  position: relative;
+  top: -1px;
+  left: 22px;
+}
+
+.pause:hover{
+  background-color: #d4e83c;
+}
+
+.pause:active{
+  transform: translateY(2px);
+}
+
+.reset{
+  width: 70px;
+  height: 25px;
+  margin: 5px;
+  cursor: pointer;
+  box-shadow:inset 0 1px 3px 0 #91b8b3;
+  background-color:#768d87;
+  border-radius:5px;
+  border:1px solid black;
+  color:#ffffff;
+  font-family: Arial, serif;
+  outline: none;
+  font-weight:bold;
+  text-decoration:none;
+  text-shadow:0 -1px 0 #2b665e;
+  position: relative;
+  top: -1px;
+  left: 22px;
+}
+
+.reset:hover{
+  background-color: red;
+}
+
+.reset:active{
+  transform: translateY(2px);
+}
+
+
+.close {
+  display: inline-block;
+  position: relative;
+  cursor: pointer;
+  top: -11px;
+  left: -10px;
+  width: 10px;
+  height: 10px;
+  background: none;
+  border: none;
+}
+
+.close:before, .close:after {
+  position: absolute;
+  content: ' ';
+  height: 15px;
+  width: 2px;
+  background-color: black;
+}
+
+.close:before {
+  transform: rotate(45deg);
+}
+
+.close:after {
+  transform: rotate(-45deg);
+}
+
+
+.submit{
+  width: 49%;
+  color: white;
+  padding: 14px 20px;
+  margin: 8px 0;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  background-color: #4CAF50;
+  position: relative;
+  left: 0;
+  transition: background-color 0.1s ease-in-out;
+}
+
+.submit:disabled{
+  cursor: default;
+  background-color: rgba(76, 175, 80, 0.6);
+}
+
+.closeForm{
+  width: 49%;
+  color: white;
+  padding: 14px 20px;
+  margin: 8px 0;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  background: #df0000;
+  position: relative;
+  right: -8px;
+}
+
