--- a/src/app/timer/timer.component.css
+++ b/src/app/timer/timer.component.css
@@ -1,6 +1,6 @@
 .timer{
     width: 280px;
-    height: 100px;
+    height: 145px;
     margin-right: 10px;
     background-color: grey;
     margin-top: 8px;
@@ -11,6 +11,17 @@
   position: absolute;
   background-color: white;
   width: 250px;
+  text-align: center;
+  margin: 5px 0 0 15px;
+  font-family: sans-serif;
+  border-radius: 15px;
+}
+
+.timer-info-item {
+  background-color: white;
+  width: 250px;
+  height: 22px;
+  line-height: 22px;
   text-align: center;
   margin: 5px 0 0 15px;
   font-family: sans-serif;
